update: add compatibility check and remove unused calls